WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304676
[block-in-inline] Fix imported/w3c/web-platform-tests/css/CSS2/normal-flow/block-in-inline-client-rects-001.html
https://bugs.webkit.org/show_bug.cgi?id=304676
Summary
[block-in-inline] Fix imported/w3c/web-platform-tests/css/CSS2/normal-flow/bl...
alan
Reported
2025-12-24 07:20:11 PST
ssia
Attachments
Patch
(5.75 KB, patch)
2025-12-24 07:29 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.75 KB, patch)
2025-12-26 08:27 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(80.41 KB, patch)
2025-12-26 10:39 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(68.47 KB, patch)
2025-12-26 19:29 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(52.68 KB, patch)
2025-12-27 06:04 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-12-24 07:29:59 PST
Created
attachment 477840
[details]
Patch
alan
Comment 2
2025-12-26 08:27:11 PST
Created
attachment 477851
[details]
Patch
alan
Comment 3
2025-12-26 10:39:33 PST
Created
attachment 477852
[details]
Patch
alan
Comment 4
2025-12-26 19:29:49 PST
Created
attachment 477855
[details]
Patch
alan
Comment 5
2025-12-27 06:04:53 PST
Created
attachment 477859
[details]
[fast-cq]Patch
EWS
Comment 6
2025-12-27 07:29:55 PST
Committed
304958@main
(c6f2219a5275): <
https://commits.webkit.org/304958@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477859
[details]
.
Radar WebKit Bug Importer
Comment 7
2025-12-27 07:30:15 PST
<
rdar://problem/167235258
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug