[block-in-inline] Fix imported/w3c/web-platform-tests/css/CSS2/normal-flow/block-in-inline-client-rects-001.html https://bugs.webkit.org/show_bug.cgi?id=304676

Reviewed by Antti Koivisto.

Blocks with zero height should not stretch their enclosing inline boxes in inline direction.

For blocks with non-zero height, we retain the existing behavior where enclosing inline boxes are stretched to the line width rather than the block width. The difference is that zero-height blocks now produce zero width inline boxes.

* LayoutTests/TestExpectations:
* LayoutTests/fast/invalid/018-expected.txt:
* LayoutTests/fast/invalid/table-residual-style-crash-expected.txt:
* LayoutTests/fast/ruby/ruby-text-before-child-split-expected.txt:
* LayoutTests/fullscreen/parent-flow-inline-with-block-child-expected.txt:
* LayoutTests/platform/glib/fast/block/basic/015-expected.txt:
* LayoutTests/platform/ios-18/transforms/3d/general/perspective-non-layer-expected.txt:
* LayoutTests/platform/ios/fast/css-generated-content/005-expected.txt:
* LayoutTests/platform/ios/fast/css-generated-content/after-duplicated-after-split-expected.txt:
* LayoutTests/platform/ios/fast/css-generated-content/beforeAfter-interdocument-expected.txt:
* LayoutTests/platform/ios/fast/css/ios/system-color-for-css-value-expected.txt:
* LayoutTests/platform/ios/fast/dynamic/insert-before-table-part-in-continuation-expected.txt:
* LayoutTests/platform/ios/fast/inline/continuation-outlines-with-layers-2-expected.txt:
* LayoutTests/platform/ios/fast/inline/outline-continuations-expected.txt:
* LayoutTests/platform/ios/tables/mozilla_expected_failures/bugs/bug56024-expected.txt:
* LayoutTests/platform/ios/transforms/3d/general/perspective-non-layer-expected.txt:
* LayoutTests/platform/mac-sequoia-wk2/transforms/3d/general/perspective-non-layer-expected.txt:
* LayoutTests/platform/mac-sonoma-wk1/transforms/3d/general/perspective-non-layer-expected.txt:
* LayoutTests/platform/mac-wk2/transforms/3d/general/perspective-non-layer-expected.txt:
* LayoutTests/platform/mac/fast/css-generated-content/005-expected.txt:
* LayoutTests/platform/mac/fast/css-generated-content/after-duplicated-after-split-expected.txt:
* LayoutTests/platform/mac/fast/css-generated-content/beforeAfter-interdocument-expected.txt:
* LayoutTests/platform/mac/fast/dynamic/insert-before-table-part-in-continuation-expected.txt:
* LayoutTests/platform/mac/fast/inline/continuation-outlines-with-layers-2-expected.txt:
* LayoutTests/platform/mac/fast/inline/outline-continuations-expected.txt:
* LayoutTests/platform/mac/http/tests/misc/acid3-expected.txt:
* LayoutTests/platform/mac/tables/mozilla_expected_failures/bugs/bug56024-expected.txt:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::constructBlockContent):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::handleBlockContent):

Canonical link: https://commits.webkit.org/304958@main